# dossierhelper

./: .gitignore  QUICKSTART.md  README.md  authenticate_gdrive.py  client_secret_705639216237-6t4db6f50inqusk7hsjtvn2g84jruild.apps.googleusercontent.com.json  dossier_report.csv  example_config.yaml  install.sh  pyproject.toml  run.sh  run_dossierhelper.py  run_ultimate.sh  run_verbose.sh
docs/: GOOGLE_DRIVE_SETUP.md  NEW_FEATURES.md  TROUBLESHOOTING_AUTH.md  rules_matrix.md
src/dossierhelper/: __init__.py  classifier.py  config.py  gdrive.py  gui.py  metadata.py  pipeline.py  text.py
src/dossierhelper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dossierhelper/assets/: duck_left.ppm  duck_left2.ppm  duck_mid.ppm  duck_right.ppm  duck_right2.ppm  grapes.ppm  lemonade_stand.ppm
